--- a/Projet session/style.css
+++ b/Projet session/style.css
@@ -1,43 +1,39 @@
-* {box-sizing: border-box;}
+
 @font-face {
     font-family: Logo;
     src: url(coolvetica rg.ttf);
 }
-@font-face {
-    font-family: blacklisted;
-    src: url(Blacklisted.ttf);
-}
+
 body {
   margin: 0;
 }
 
 #background {
-  background-image: url(backgroundimage2.jpg);
-  background-size: cover;
-  background-position: center center;
-  position: relative;
-  top: 0;
-  bottom: 0;
-  height: 100vh;
+  background-attachment: fixed;
+  background-repeat: repeat-y;
+  background-image: url(backgroundimage.jpg);
+  position:absolute;
+left:0;
+right:0;
+top:0;
+bottom:0;
+background-size:cover;
+z-index:1;
 }
-#background-overlay {
-    position: absolute;
-    background-color: rgba(0,0,0,0.6);
-    top: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
+
+.content{
+	position:relative;
+	z-index:2;
+
 }
-.logo {
-    color: white;
+#logo img{
+
     float:left;
-    margin-right: 10px;
+    margin-left: 30px;
     margin-top: 10px;
-    font-size:75px;
-    font-family: logo;
-    text-align: center;
-    padding: 14px 16px;
-    font-weight: 900;
+    height: 90px;
+    width: 230px;
+
 }
 
 #millieu {
@@ -46,127 +42,87 @@ body {
 
 }
 .entete {
-  padding-top: 40px;
+  padding-top: 50px;
+  padding-left: 70px;
+  text-align: center;
+  transform: rotate(10deg);
+}
+
+.entete p{
   color: white;
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 44px;
   font-weight: bold;
   letter-spacing: -1px;
   line-height: 1;
-  text-align: center;
-  transform: rotate(10deg);
 }
 
-#cadre {
-  border-style: solid;
-  border-color: rgba(0,0,0,.01);
-  border-width: 2px;
-  background-color: orange;
-
-}
-
-.topnav a {
-  height:100px;
+.ulNavBar {
+  list-style-type: none;
   margin: 0;
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
-  font-weight: 900;
-  Float: right;
-  display: block;
-  color: white;
-  text-align: center;
-  margin-left: 30px;
-  margin-top: 30px;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 19px;
+  margin-top: 10px;
+  padding: 0;
+  overflow: hidden;
 }
 
-.topnav a:hover {
+.ulNavBar li{
+    Float: right;
+    margin-top: 20px;
+  }
+
+.ulNavBar a{
+    display: block;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-size: 19px;
+    font-weight: 900;
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    }
+
+.ulNavBar a:hover {
   transform: translatey(10px);
   transition: all 0.25s linear;
 }
-@keyframes logoanimation {
-  0% {
-    color: pink;
-  }
-  50% {
-    color: yellow;
-  }
-  100% {
-    color: blue;
-   }
-}
 
- .logo :hover{
-    animation: logoanimation 1s infinite;
+.button {
+    display: block;
+    border-radius: 4px;
+    background-color: transparent;
+    border: solid;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 300px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    margin-left: 20px;
+    margin-top: 70px;
    }
-   @keyframes logoanimation {
-     0% {
-       color: gray;
-     }
-     25% {
-       color: white;
-     }
-     50% {
-       color: gray;
-      }
-      75% {
-        color: white;
-       }
-     100% {
-       color: gray;
-      }
-   }
-
-   .button {
-     display: block;
-     border-radius: 4px;
-     background-color: transparent;
-     border: solid;
-     color: #FFFFFF;
-     text-align: center;
-     font-size: 28px;
-     padding: 20px;
-     width: 300px;
-     transition: all 0.5s;
-     cursor: pointer;
-     margin: 5px;
-     margin-left: 20px;
-     margin-top: 100px;
-   }
-
 
 .button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
 }
 
 .button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
 }
 
 .button:hover span {
-  padding-right: 25px;
+    padding-right: 25px;
 }
 
 .button:hover span:after {
-  opacity: 1;
-  right: 0;
+    opacity: 1;
+    right: 0;
 }
-
-@media screen and (max-width: 600px) {
-  .topnav a, {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
