Ajouter le javascript et arranger le texte de la main page

--- a/SiteWeb/style.css
+++ b/SiteWeb/style.css
@@ -102,6 +102,29 @@ z-index:1;
     margin-top: 70px;
    }
 
+   .wrapper {
+      display: block;
+      float: left;
+      margin-left: 20px;
+   }
+
+    .wrapper p {
+      transition: all 1s ;
+
+    }
+
+    .hidden {
+      opacity: 0;
+    }
+   #paragraphe1id {
+     color: white;
+     margin-left: 30px;
+   }
+   #paragraphe2id {
+     color: white;
+     margin-left: 30px;
+   }
+
 .button span {
     cursor: pointer;
     display: inline-block;
