--- a/SiteWeb/css/style.css
+++ b/SiteWeb/css/style.css
@@ -11,7 +11,7 @@ body {
 #background {
   background-attachment: fixed;
   background-repeat: repeat-y;
-  background-image: url(backgroundimage.jpg);
+  background-image: url(/SiteWeb/image/backgroundimage.jpg);
   position:absolute;
   left:0;
   right:0;
@@ -23,7 +23,7 @@ body {
 #background_installation {
     background-attachment: fixed;
     background-repeat: repeat-y;
-    background-image: url(backgroundinstallation.jpg);
+    background-image: url(/SiteWeb/image/backgroundinstallation.jpg);
     position:absolute;
     left:0;
     right:0;
@@ -193,21 +193,38 @@ body {
 .etapes {
   padding-top: 20px;
   color: white;
-  font-size: 30px;
+  font-size: 60px;
   margin-left: 30px;
 }
 img {
   margin-left: 50px;
 }
 .petapes {
-  font-size: 16px;
+  font-size: 32px;
   color: white;
   margin-left: 50px;
 }
 
 #resize {
+  padding-top: 20px;
   height: 600px;
   width: 900px;
+}
+
+#lienGit {
+  width: 100%;
+  color: white;
+  font-size: 60px;
+  margin-left: 50px;
+  margin-top: 20px;
+  text-align: left;
+  float: left;
+}
+
+#millieuecran {
+  width: 50%;
+  margin: 0 auto;
+
 }
 
 
