--- a/SiteWeb/css/style.css
+++ b/SiteWeb/css/style.css
@@ -24,7 +24,7 @@ body {
     background-attachment: fixed;
     background-repeat: repeat-y;
     background-image: url(../image/backgroundinstallation.jpg);
-    position:absolute;v
+    position:absolute;
     left:0;
     right:0;
     top:0;
